完善国际化异常信息

--- a/src/main/resources/i18n/message_en_US.properties
+++ b/src/main/resources/i18n/message_en_US.properties
@@ -22,4 +22,12 @@
 # SOFTWARE.
 #
 1000=Successful operation
+1001=Interface error
+1002=Parameter verification failed
+1003=unknown mistake
+1004=Data duplication
+2000=User does not exist
+2001=wrong user name or password
 2002=The user has not logged in yet, please log in first
+2003=Insufficient permissions, please contact the administrator
+3000=Client does not exist
