1：完善国际化信息 2：完善新增判重逻辑

--- a/src/main/resources/i18n/message_en_US.properties
+++ b/src/main/resources/i18n/message_en_US.properties
@@ -30,4 +30,13 @@
 2001=wrong user name or password
 2002=The user has not logged in yet, please log in first
 2003=Insufficient permissions, please contact the administrator
+2004=Duplicate account name
+2005=Duplicate phone number
+2006=Duplicate email address
 3000=Client does not exist
+3001=Duplicate client id
+4000=Duplicate function permission code
+4001=Duplicate function permission name
+4002=Duplicate function permission scope
+5000=Duplicate role code
+5001=Duplicate role name
